--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=peticionsql
 server.port=8080
-spring.datasource.url=jdbc:sqlserver://localhost\\SQLEXPRESS;trustServerCertificate=true;
-spring.datasource.username=sa
-spring.datasource.password=123456789
+spring.datasource.url=jdbc:sqlserver://${DB_SERVER};trustServerCertificate=true;
+spring.datasource.username=${DB_USER}
+spring.datasource.password=${DB_PASSWORD}
 spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
